FIX: navbar invisible version mobile

--- a/badajoz_unida/badajoz_unida_front/src/app/app.component.css
+++ b/badajoz_unida/badajoz_unida_front/src/app/app.component.css
@@ -1,1 +1,4 @@
 
+main > div {
+    margin-left: 0 !important;
+}
